# spirescry

./: .gitignore  CONTEXT.md  Directory.Build.targets  INFO_EXPOSURE_AUDIT.md  LICENSE  README.md  build.sh  protocol.json
.github/workflows/: host-ci.yml  unit-tests.yml
cli/: Cargo.toml  build.rs  protocol_generator.rs
cli/src/: main.rs
cli/tests/: protocol_generation.rs
headless/: extract_pck_localization.py
headless/GodotStubs/: Attributes.cs  Bridge.cs  Collections.cs  Controls.cs  Core.cs  ExtraGodotTypes.cs  GodotStubs.csproj  Input.cs  Math.cs  Rendering.cs  StringExtensions.cs  Types.cs  UI.cs
headless/Host/: Boot.cs  FirstChanceFilter.cs  HeadlessLocalization.cs  Host.csproj  HostLifetime.cs  HostLog.cs  HostPatchBatch.cs  InlineSynchronizationContext.cs  Program.cs
headless/Patcher/: Patcher.csproj  Program.cs
mods/: spirescry.json
src/: Mod.cs  ProtocolCapabilities.cs  ProtocolVocabulary.cs  Reflect.cs  RejectionCodes.cs  Spirescry.csproj
src/Actions/: Dispatcher.cs  EventOptionCheats.cs
src/Bridge/: Handlers.cs  HttpBridge.cs
src/State/: CardPlayability.cs  CardSpecifier.cs  CollectionSnapshot.cs  ConsumerSemanticRead.cs  DecisionProjection.cs  DecisionSurface.cs  EventSync.cs  (+19 more)
tests/: bridge.py  build_identity_test.py  build_stop_test.sh  ci.py  e2e.py  e2e_settlement_test.py  eventsweep.py  host_exit.py  parity.py  parity_settlement_test.py  play_skill_fault_protocol_test.py  play_skill_preflight_test.sh  projection_schema_drift_test.py  protocol.py  protocol_artifact_test.sh  protocol_contract_test.py  sweeps.py  world_walker_test.py
(+8 files in other folders)
