[package]
name = "spirescry"
version = "0.1.0"
edition = "2021"
description = "CLI for the spirescry HTTP bridge"
license = "MIT"

[[bin]]
name = "spirescry"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
ureq = { version = "2.10", default-features = false, features = ["json"] }
serde_json = "1.0"

[build-dependencies]
serde_json = "1.0"

[profile.release]
lto = "thin"
strip = true
